provisioning/cfn/security-group.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: Security Group
# ------------------------------------------------------------------------------
# Parameters
# ------------------------------------------------------------------------------
Parameters:
  VpcId:
    Type: AWS::EC2::VPC::Id
  VpcCidrBlock:
    Type: String
    Default: 172.31.0.0/16

# ------------------------------------------------------------------------------
# Resources
# ------------------------------------------------------------------------------
Resources:
  # SecurityGroup
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for EC2
      VpcId: !Ref VpcId
      Tags:
        - Key: f-iot.service.name
          Value: security-group-for-ec2
  SecurityGroupSSHinbound:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Allowing access from local pc."
      GroupId: !Ref SecurityGroup
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      CidrIp: 0.0.0.0/0
  SecurityGroupHTTPoutbound:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "Allowing access to alb."
      GroupId: !Ref SecurityGroup
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
      CidrIp: !Ref VpcCidrBlock
  SecurityGroupTCPoutbound:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "Allowing access to logstash."
      GroupId: !Ref SecurityGroup
      IpProtocol: tcp
      FromPort: 5044
      ToPort: 5044
      CidrIp: !Ref VpcCidrBlock
  # OpenSearchSecurityGroup
  OpenSearchSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for Opensearch
      VpcId: !Ref VpcId
      Tags:
        - Key: f-iot.service.name
          Value: security-group-for-open-search
  OpenSearchSecurityGroupHTTPSinbound:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Allowing access from logstash and alb."
      GroupId: !Ref OpenSearchSecurityGroup
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      CidrIp: !Ref VpcCidrBlock
  OpenSearchSecurityGroupHTTPSoutbound:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "Allowing access to logstash and alb."
      GroupId: !Ref OpenSearchSecurityGroup
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      CidrIp: !Ref VpcCidrBlock
  # VpcEndpointSecurityGroup
  VpcEndpointSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for VpcEndpoint
      VpcId: !Ref VpcId
      Tags:
        - Key: f-iot.service.name
          Value: security-group-for-vpc-endpoint
  VpcEndpointSecurityGroupHTTPSinbound:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Allowing access from internal resources of vpc."
      GroupId: !Ref VpcEndpointSecurityGroup
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      CidrIp: !Ref VpcCidrBlock
  VpcEndpointSecurityGroupHTTPSoutbound:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "Allowing access to internal resources of vpc."
      GroupId: !Ref VpcEndpointSecurityGroup
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      CidrIp: !Ref VpcCidrBlock
  # FargateSecurityGroup
  FargateSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for Fargate
      VpcId: !Ref VpcId
      Tags:
        - Key: f-iot.service.name
          Value: security-group-for-fargate
  FargateSecurityGroupTCPinbound:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Allowing access from ec2."
      GroupId: !Ref FargateSecurityGroup
      IpProtocol: tcp
      FromPort: 5044
      ToPort: 5044
      CidrIp: !Ref VpcCidrBlock
  FargateSecurityGroupS3outbound:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "Allowing access to s3 gateway vpc endpoint."
      GroupId: !Ref FargateSecurityGroup
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      DestinationPrefixListId: "{{resolve:ssm:S3PrefixListId:1}}"
  FargateSecurityGroupECRoutbound:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "Allowing access to ecr vpc endpoint and opensearch vpc endpoint."
      GroupId: !Ref FargateSecurityGroup
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      CidrIp: !Ref VpcCidrBlock
  FargateSecurityGroupDNSoutbound:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "Allowing access to route53."
      GroupId: !Ref FargateSecurityGroup
      IpProtocol: tcp
      FromPort: 53
      ToPort: 53
      CidrIp: !Ref VpcCidrBlock
  # AlbSecurityGroup
  AlbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for Alb
      VpcId: !Ref VpcId
      Tags:
        - Key: f-iot.service.name
          Value: security-group-for-alb
  AlbSecurityGroupHTTPinbound:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Allowing access from ec2."
      GroupId: !Ref AlbSecurityGroup
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
      CidrIp: !Ref VpcCidrBlock
  AlbSecurityGroupHTTPSoutbound:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "Allowing access to opensearch."
      GroupId: !Ref AlbSecurityGroup
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      CidrIp: !Ref VpcCidrBlock

# ------------------------------------------------------------------------------
# Outputs
# ------------------------------------------------------------------------------
Outputs:
  SecurityGroupId:
    Value: !Ref SecurityGroup
  OpenSearchSecurityGroupId:
    Value: !Ref OpenSearchSecurityGroup
  VpcEndpointSecurityGroupId:
    Value: !Ref VpcEndpointSecurityGroup
  FargateSecurityGroupId:
    Value: !Ref FargateSecurityGroup
  AlbSecurityGroupId:
    Value: !Ref AlbSecurityGroup
